epserde/tests/fail/full_copy_unknown.stderr
error: `Q` is not a type parameter of `Unknown`
  --> tests/fail/full_copy_unknown.rs:11:21
   |
11 | #[epserde(full_copy(Q))]
   |                     ^
